<resources>
    <!-- Name for the application -->
    <string name="app_name">AstroWest Store</string>

    <!-- Name for the editor activity -->
    <string name="editor_name">Edit Product</string>

    <!-- Name for adding a new product activity -->
    <string name="new_product_name">Add a new product</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">The list is empty&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Name of the product in editor activity -->
    <string name="name_text">Name of the product</string>

    <!-- Name of the producer in editor activity -->
    <string name="producer_text">Producer</string>

    <!-- Price in editor activity -->
    <string name="price_text">Price</string>

    <!-- Specifications text in the editor activity -->
    <string name="specifications_text">Specifications</string>

    <!-- User level text in the editor activity -->
    <string name="user_level_text">User level:</string>

    <!-- Optical design text in the editor activity -->
    <string name="optical_design_text">Optical design:</string>

    <!-- Optical diameter text in the editor activity -->
    <string name="optical_diameter_text">Optical diameter:</string>

    <!-- Focal length text in the editor activity -->
    <string name="focal_length_text">Focal length:</string>

    <!-- Mount type text in the editor activity -->
    <string name="mount_type_text">Mount type:</string>

    <!-- Contact information in the editor activity -->
    <string name="contact_text">Phone number:</string>

    <!-- Quantity text in the editor activity -->
    <string name="quantity_text">Quantity available:</string>

    <!-- Quantity null text in the list item layout -->
    <string name="unknown_quantity_text">Unknown quantity</string>

    <!-- Price null text in the list item layout -->
    <string name="unknown_price_text">Unknown price</string>

    <!-- Name null text in the list item layout -->
    <string name="unknown_name_text">Unknown telescope</string>

    <!-- Modify quantity text in the editor activity -->
    <string name="modify_quantity_text">Modify quantity by:</string>

    <!-- Quantity placeholder text in the editor activity -->
    <string name="hint_quantity_text">qty.</string>

    <!-- Order from supplier button text in the editor activity -->
    <string name="supplier_text">Order from supplier</string>

    <!-- Delete product button text in the editor activity -->
    <string name="delete_product_text">Delete product</string>

    <!-- Decrease quantity button text in the editor activity -->
    <string name="decrease_quantity_text">-</string>

    <!-- Increase quantity button text in the editor activity -->
    <string name="increase_quantity_text">+</string>

    <!-- Sale button text in the editor activity -->
    <string name="sale_button_text">Sale</string>

    <!-- Units for the telescope specifications -->
    <string name="telescope_units_text">mm</string>

    <!-- Optical Diameter telescope specifications -->
    <string name="hint_diameter_text">diameter</string>

    <!-- Focal Length telescope specifications -->
    <string name="hint_focal_length_text">focal length</string>

    <!-- Contact information hint -->
    <string name="hint_contact_information_text">Eg: 123456789</string>

    <!-- Label for dropdown menu option if the product's user level is none -->
    <string name="level_none">None</string>

    <!-- Label for dropdown menu option if the product's user level is beginner -->
    <string name="level_beginner">Beginner</string>

    <!-- Label for dropdown menu option if the product's user level is intermediate -->
    <string name="level_intermediate">Intermediate</string>

    <!-- Label for dropdown menu option if the product's user level is advanced -->
    <string name="level_advanced">Advanced</string>

    <!-- Label for dropdown menu option if the product's optical design is none -->
    <string name="design_none">None</string>

    <!-- Label for dropdown menu option if the product's optical design is reflector -->
    <string name="design_reflector">Reflector</string>

    <!-- Label for dropdown menu option if the product's optical design is refractor -->
    <string name="design_refractor">Refractor</string>

    <!-- Label for dropdown menu option if the product's mount type is none -->
    <string name="mount_none">None</string>

    <!-- Label for dropdown menu option if the product's mount type is dobson -->
    <string name="mount_dobson">Dobson</string>

    <!-- Label for dropdown menu option if the product's mount type is equatorial -->
    <string name="mount_equatorial">Equatorial</string>

    <!-- Label for dropdown menu option if the product's mount type is azimuthal -->
    <string name="mount_azimuthal">Azimuthal</string>

    <!-- Label for overflow menu option that inserts fake product data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Label for editor menu option to save product and leave editor -->
    <string name="action_save">Save</string>

    <!-- Toast message in editor when current product has failed to be inserted -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product has been successfully inserted -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when current product has failed to be updated -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in editor when current product has been successfully updated -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current quantity is smaller than 0 -->
    <string name="editor_quantity_decrement_to_small">The minimum quantity is 0.</string>

    <!-- Toast message on sell button click when current quantity is smaller than 0 -->
    <string name="editor_quantity_insuficient">Not enough products to sell.</string>

    <!-- Toast message in editor when there is no decrement value -->
    <string name="editor_quantity_decrement_inexistent">Please enter a decrement.</string>

    <!-- Toast message in editor when current quantity is bigger than 100 -->
    <string name="editor_quantity_increment_to_big">The maximum quantity is 100.</string>

    <!-- Toast message in editor when there is no decrement value -->
    <string name="editor_quantity_increment_inexistent">Please enter a increment.</string>

    <!-- Toast message in editor when there is no phone number value -->
    <string name="editor_phone_number_inexistent">Please enter a phone number.</string>

    <!-- Toast message in editor when there are empty fields -->
    <string name="editor_incomplete_details">Please complete all the fields before saving.</string>

    <!-- Toast message in editor when the phone number is to short -->
    <string name="editor_phone_number_too_short">The phone number is too short it must have 9 digits.</string>

    <!-- Toast message in editor when the phone number is to long -->
    <string name="editor_phone_number_too_long">The phone number is too long it must have 9 digits.</string>

    <!-- "Quantity: " text appended to the quantity in the list item layout -->
    <string name="quantity_appended_text">Quantity: </string>

    <!-- "Quantity: " text appended to the quantity in the list item layout -->
    <string name="price_appended_text">Price: $</string>
</resources>
